# msfs-rss

./: README.md  atom.xml  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  update_feed.yaml
feeds/: msfs.xml  thresholdx.xml
src/: msfs.py  thresholdx.py  typing_util.py
